<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="applicationName">Time Keep</string>

    <!-- Options menu -->
    <string name="addEntry">Add Entry</string>
    <string name="removeEntry">Remove Last</string>

    <!-- Parameters for the "Add Item" dialog -->


    <!-- Labels for the button -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="defaultDate">Jaycember 55, 7373</string>
    <string name="dateTitle">Date</string>
    <string name="hoursTitle">Hours</string>
    <string name="projectTitle">Project</string>
    <string name="clientTitle">Client</string>
    <string name="done">Done</string>
    <string name="notesTitle">Notes</string>
    <string name="delete">Delete</string>
    <string name="defaultClient">Client</string>
    <string name="defaultProject">This Is a Loooooooooooooooooooooooooooooooooooooooooooooooong Project Name</string>
    <string name="help">Help</string>
    <string name="save">Save</string>

    <color name="red">#ff0000</color>

    <string name="sync">Sync</string>
    <string name="serverTitle">Server</string>
    <string name="keyTitle">Key</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

</resources>