<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/dateTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/hoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoursTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/hoursTextEdit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/projectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projectTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/projectTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/clientTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/clientTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/notesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notesTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/notesTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

        </TableRow>

    </TableLayout>

</LinearLayout>